[tool.poetry]
name = "caizen"
version = "0.1.0"
description = ""
authors = ["Brad Geesaman <3769609+bgeesaman@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
neo4j = "^5.20.0"
flake8 = "^7.0.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
